RESOLVED FIXED98411
[Qt] Fix a QSocketNotifier warning at startup
https://bugs.webkit.org/show_bug.cgi?id=98411
Summary [Qt] Fix a QSocketNotifier warning at startup
Jocelyn Turcotte
Reported 2012-10-04 08:02:02 PDT
[Qt] Fix a QSocketNotifier warning at startup
Attachments
Patch (1.90 KB, patch)
2012-10-04 08:05 PDT, Jocelyn Turcotte
hausmann: review+
Jocelyn Turcotte
Comment 1 2012-10-04 08:05:27 PDT
Jocelyn Turcotte
Comment 2 2012-10-08 02:58:10 PDT
Note You need to log in before you can comment on or make changes to this bug.