[Qt] Fix a QSocketNotifier warning at startup https://bugs.webkit.org/show_bug.cgi?id=98411

Reviewed by Simon Hausmann.

The actual warning:
QSocketNotifier: socket notifiers cannot be enabled from another thread

The problem was that QSocketNotifier::setEnabled was called on the main thread
after moveToThread was called. This hasn't had any effect since Connection
would dispatch a readyReadHandler call right after which would then call
setEnabled again from the correct thread from ~SocketNotifierResourceGuard.

Replace the call with a queued invoke to shut the warning.

* Platform/qt/WorkQueueQt.cpp:
(WorkQueue::registerSocketEventHandler):

Canonical link: https://commits.webkit.org/116614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130627 268f45cc-cd09-0410-ab3c-d52691b4dbfc